@@ -1,15 +1,17 @@
 package wooteco.subway.acceptance;
 
+import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertAll;
 
 import io.restassured.RestAssured;
+import io.restassured.path.json.JsonPath;
 import io.restassured.response.ExtractableResponse;
 import io.restassured.response.Response;
-import java.util.Arrays;
+import io.restassured.response.ResponseBodyExtractionOptions;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpStatus;
@@ -22,17 +24,10 @@ public class LineAcceptanceTest extends AcceptanceTest {
     @DisplayName("노선을 생성한다.")
     @Test
     void createLine() {
-        Map<String, String> params = new HashMap<>();
-        params.put("name", "2호선");
-        params.put("color", "bg-green-600");
+        String name = "2호선";
+        String color = "bg-green-600";
 
-        ExtractableResponse<Response> response = RestAssured.given().log().all()
-                .body(params)
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when()
-                .post("/lines")
-                .then().log().all()
-                .extract();
+        ExtractableResponse<Response> response = generateLine(name, color);
 
         assertThat(response.statusCode()).isEqualTo(HttpStatus.CREATED.value());
         assertThat(response.header("Location")).isNotBlank();
@@ -41,98 +36,52 @@ public class LineAcceptanceTest extends AcceptanceTest {
     @DisplayName("기존에 존재하는 지하철역 이름으로 지하철역을 생성한다.")
     @Test
     void createLineWithDuplicateName() {
-        // given
-        Map<String, String> params = new HashMap<>();
-        params.put("name", "2호선");
-        params.put("color", "bg-green-600");
+        String name = "2호선";
+        String color = "bg-green-600";
+        generateLine(name, color);
 
-        RestAssured.given().log().all()
-                .body(params)
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when()
-                .post("/lines")
-                .then().log().all()
-                .extract();
+        ExtractableResponse<Response> response = generateLine(name, color);
 
-        // when
-        ExtractableResponse<Response> response = RestAssured.given().log().all()
-                .body(params)
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when()
-                .post("/lines")
-                .then()
-                .log().all()
-                .extract();
-
-        // then
         assertThat(response.statusCode()).isEqualTo(HttpStatus.BAD_REQUEST.value());
     }
 
     @DisplayName("노선을 조회한다.")
     @Test
     void getLines() {
-        /// given
-        Map<String, String> params1 = new HashMap<>();
-        params1.put("name", "2호선");
-        params1.put("color", "bg-green-600");
+        ExtractableResponse<Response> createdResponse1 = generateLine("2호선", "bg-green-600");
+        ExtractableResponse<Response> createdResponse2 = generateLine("신분당선", "bg-red-600");
 
-        ExtractableResponse<Response> createResponse1 = RestAssured.given().log().all()
-                .body(params1)
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when()
-                .post("/lines")
-                .then().log().all()
-                .extract();
-
-        Map<String, String> params2 = new HashMap<>();
-        params2.put("name", "신분당선");
-        params2.put("color", "bg-red-600");
-
-        ExtractableResponse<Response> createResponse2 = RestAssured.given().log().all()
-                .body(params2)
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when()
-                .post("/lines")
-                .then().log().all()
-                .extract();
-
-        // when
         ExtractableResponse<Response> response = RestAssured.given().log().all()
                 .when()
                 .get("/lines")
                 .then().log().all()
                 .extract();
 
-        // then
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
-        List<Long> expectedLineIds = Arrays.asList(createResponse1, createResponse2).stream()
-                .map(it -> Long.parseLong(it.header("Location").split("/")[2]))
-                .collect(Collectors.toList());
-        List<Long> resultLineIds = response.jsonPath().getList(".", LineResponse.class).stream()
+        List<Long> expectedLineIds = List.of(createdResponse1, createdResponse2)
+                .stream()
+                .map(ExtractableResponse::response)
+                .map(ResponseBodyExtractionOptions::jsonPath)
+                .map(it -> it.getLong("id"))
+                .collect(toList());
+        List<Long> resultLineIds = response.jsonPath()
+                .getList(".", LineResponse.class)
+                .stream()
                 .map(it -> it.getId())
-                .collect(Collectors.toList());
-        assertThat(resultLineIds).containsAll(expectedLineIds);
+                .collect(toList());
+        assertAll(
+                () -> assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value()),
+                () -> assertThat(resultLineIds).containsAll(expectedLineIds)
+        );
     }
 
     @DisplayName("단일 노선을 조회한다.")
     @Test
     void getLine() {
-        //given
-        Map<String, String> param = new HashMap<>();
-        param.put("name", "1호선");
-        param.put("color", "bg-blue-600");
-
-        ExtractableResponse<Response> createResponse = RestAssured.given().log().all()
-                .body(param)
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when()
-                .post("/lines")
-                .then().log().all()
-                .extract();
-
-        Long id = createResponse.body().jsonPath().getLong("id");
-        String name = createResponse.body().jsonPath().getString("name");
-        String color = createResponse.body().jsonPath().getString("color");
+        ExtractableResponse<Response> createdResponse = generateLine("1호선", "bg-blue-600");
+        JsonPath createdResponseJsonPath = createdResponse.body().jsonPath();
+        Long id = createdResponseJsonPath.getLong("id");
+        String name = createdResponseJsonPath.getString("name");
+        String color = createdResponseJsonPath.getString("color");
 
         ExtractableResponse<Response> response = RestAssured.given().log().all()
                 .when()
@@ -140,35 +89,43 @@ public class LineAcceptanceTest extends AcceptanceTest {
                 .then().log().all()
                 .extract();
 
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
-        assertThat(id).isEqualTo(response.body().jsonPath().getLong("id"));
-        assertThat(name).isEqualTo(response.body().jsonPath().getString("name"));
-        assertThat(color).isEqualTo(response.body().jsonPath().getString("color"));
+        JsonPath responseJsonPath = response.body().jsonPath();
+        assertAll(
+                () -> assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value()),
+                () -> assertThat(responseJsonPath.getLong("id")).isEqualTo(id),
+                () -> assertThat(responseJsonPath.getString("name")).isEqualTo(name),
+                () -> assertThat(responseJsonPath.getString("color")).isEqualTo(color)
+        );
     }
 
     @DisplayName("노선을 수정한다.")
     @Test
     void updateLine() {
-        Map<String, String> params = new HashMap<>();
-        params.put("name", "2호선");
-        params.put("color", "bg-green-600");
+        ExtractableResponse<Response> createdResponse = generateLine("2호선", "bg-green-600");
+        Long id = createdResponse.body().jsonPath().getLong("id");
 
-        ExtractableResponse<Response> createResponse = RestAssured.given().log().all()
-                .body(params)
+        String updateName = "2호선";
+        String updateColor = "bg-blue-600";
+        ExtractableResponse<Response> response = RestAssured.given().log().all()
+                .body(Map.of("name", updateName, "color", updateColor))
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .when()
-                .post("/lines")
+                .put("/lines/" + id)
                 .then().log().all()
                 .extract();
 
-        Long id = createResponse.body().jsonPath().getLong("id");
+        assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
+    }
 
-        Map<String, String> updatedParams = new HashMap<>();
-        updatedParams.put("name", "2호선");
-        updatedParams.put("color", "bg-blue-600");
+    @DisplayName("존재하지 않는 노선을 수정할 경우 해당 id와 body 를 통해 노선을 생성한다.")
+    @Test
+    void updateLineWithNoneId() {
+        Long id = 10L;
+        String name = "2호선";
+        String color = "bg-blue-600";
 
         ExtractableResponse<Response> response = RestAssured.given().log().all()
-                .body(updatedParams)
+                .body(Map.of("name", name, "color", color))
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .when()
                 .put("/lines/" + id)
@@ -181,19 +138,8 @@ public class LineAcceptanceTest extends AcceptanceTest {
     @DisplayName("노선을 삭제한다.")
     @Test
     void deleteLine() {
-        Map<String, String> params = new HashMap<>();
-        params.put("name", "2호선");
-        params.put("color", "bg-green-600");
-
-        ExtractableResponse<Response> createResponse = RestAssured.given().log().all()
-                .body(params)
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when()
-                .post("/lines")
-                .then().log().all()
-                .extract();
-
-        Long id = createResponse.body().jsonPath().getLong("id");
+        ExtractableResponse<Response> createdResponse = generateLine("2호선", "bg-green-600");
+        Long id = createdResponse.body().jsonPath().getLong("id");
 
         ExtractableResponse<Response> response = RestAssured.given().log().all()
                 .when()
@@ -202,5 +148,33 @@ public class LineAcceptanceTest extends AcceptanceTest {
                 .extract();
 
         assertThat(response.statusCode()).isEqualTo(HttpStatus.NO_CONTENT.value());
+    }
+
+    @DisplayName("존재하지 않는 노선의 id를 삭제할 경우 동일하게 204를 반환한다.")
+    @Test
+    void deleteLineWithNoneId() {
+        Long id = 10L;
+
+        ExtractableResponse<Response> response = RestAssured.given().log().all()
+                .when()
+                .delete("/lines/" + id)
+                .then().log().all()
+                .extract();
+
+        assertThat(response.statusCode()).isEqualTo(HttpStatus.NO_CONTENT.value());
+    }
+
+    private ExtractableResponse<Response> generateLine(String name, String color) {
+        Map<String, String> params = new HashMap<>();
+        params.put("name", name);
+        params.put("color", color);
+
+        return RestAssured.given().log().all()
+                .body(params)
+                .contentType(MediaType.APPLICATION_JSON_VALUE)
+                .when()
+                .post("/lines")
+                .then().log().all()
+                .extract();
     }
 }
